add authentication to swagger
