# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Admin\PhotoController as AdminPhotoController;
 use App\Http\Controllers\Admin\PostController as AdminPostController;
 use App\Http\Controllers\HomeController;
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -28,3 +29,4 @@ Route::group(['prefix' => 'admin', 'middleware' => 'auth:api'], function() {
 });
 
 Route::get('home', [HomeController::class, 'index']);
+Route::post('login', [UserController::class, 'authenticate']);
